<resources>
    <string name="app_name">DroidFish-modern</string>
    <string name="engine_hash_default">64</string>
    <string name="moves_per_session_default">60</string>
    <string name="time_control_default">120000</string>
    <string name="time_increment_default">0</string>
    <string name="squareSelectType_default">1</string>
    <string name="language_default">default</string>
    <string name="font_size_default">12</string>
    <string name="thinking_arrows_default">4</string>
    <string name="scroll_sensitivity_default">2</string>
    <string name="book_line_length_default">1000000</string>
    <string name="viewPieceType_default">1</string>
    <string name="viewPieceSet_default">chesscases</string>
    <string name="autoDelay_default">5000</string>
    <string name="move_announce_type_default">off</string>
    <string name="cpu_warning">\
<b>CPU Usage</b>\
\
If you leave DroidFish running in the background and <i>GameMode</i> is set to <i>Analysis</i> or <i>Computer vs Computer</i>, or if <i>Thinking Time</i> is set to a large value, or if <i>Pondering</i> is enabled, DroidFish can use a lot of CPU power.\
\
If you are running on battery power, it is recommended that you change settings to conserve battery power, or that you exit <i>DroidFish</i> using the back button when you are not actively using the program.
    </string>
    <string name="offer_draw">Offer Draw</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="promote_pawn_to">Promote pawn to?</string>
    <string name="clipboard">Clipboard</string>
    <string name="copy_game">Copy Game to Clipboard</string>
    <string name="copy_position">Copy Position to Clipboard</string>
    <string name="paste">Paste from Clipboard</string>
    <string name="share_game">Share Game</string>
    <string name="share_text">Share as Text</string>
    <string name="share_image">Share as Image</string>
    <string name="load_last_file">Load from last file</string>
    <string name="load_game">Load game from PGN file</string>
    <string name="load_position">Load position from file</string>
    <string name="load_scid_game">Load game from Scid file</string>
    <string name="load_del_game">Load deleted game</string>
    <string name="save_game">Save game to PGN file</string>
    <string name="get_fen">Retrieve Position</string>
    <string name="repeat_last_move">Repeat last move</string>
    <string name="truncate_gametree">Truncate Game Tree</string>
    <string name="move_var_up">Move Variation Up</string>
    <string name="move_var_down">Move Variation Down</string>
    <string name="add_null_move">Add Null Move</string>
    <string name="tools_menu">Tools</string>
    <string name="load_save_menu">Load/Save Game</string>
    <string name="goto_move">Goto move</string>
    <string name="limit_strength">Limit Strength</string>
    <string name="set_engine_strength">Set Engine Strength</string>
    <string name="engine_cannot_reduce_strength">Engine cannot reduce playing strength</string>
    <string name="edit_randomization">Edit Randomization</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="side_to_move">Side to Move</string>
    <string name="clear_board">Clear Board</string>
    <string name="initial_position">Initial Position</string>
    <string name="castling_flags">Castling Flags</string>
    <string name="en_passant_file">En Passant File</string>
    <string name="move_counters">Move Counters</string>
    <string name="paste_position">Paste Position</string>
    <string name="edit_board">Edit Board</string>
    <string name="select_side_to_move_first">Select side to move first</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="white_square_character">\u25a0</string>
    <string name="black_square_character">\u25a1</string>
    <string name="white_king_castle">White king castle</string>
    <string name="white_queen_castle">White queen castle</string>
    <string name="black_king_castle">Black king castle</string>
    <string name="black_queen_castle">Black queen castle</string>
    <string name="none">None</string>
    <string name="select_en_passant_file">Select En Passant File</string>
    <string name="edit_move_counters">Edit Move Counters</string>
    <string name="internal_book">&lt;Internal Book&gt;</string>
    <string name="eco_book">&lt;ECO Book&gt;</string>
    <string name="no_book">&lt;No Book&gt;</string>
    <string name="select_opening_book_file">Select opening book file</string>
    <string name="select_chess_engine">Select Chess Engine</string>
    <string name="select_pgn_file">Open PGN file</string>
    <string name="select_pgn_file_save">Save to PGN file</string>
    <string name="select_fen_file">Open FEN/EPD file</string>
    <string name="select_file">Select file</string>
    <string name="select_directory">Select directory</string>
    <string name="pgn_load">Load</string>
    <string name="pgn_save">Save</string>
    <string name="reading_pgn_file">Reading PGN file…</string>
    <string name="reading_fen_file">Reading FEN/EPD file…</string>
    <string name="reading_scid_file">Reading Scid file…</string>
    <string name="new_file">&lt;New File&gt;</string>
    <string name="new_engine">&lt;New Engine&gt;</string>
    <string name="no_pgn_files">No files found in directory DroidFish/pgn on the SD card</string>
    <string name="no_fen_files">No files found in directory DroidFish/epd on the SD card</string>
    <string name="select_color_theme">Select Color Theme</string>
    <string name="colortheme_original">Original</string>
    <string name="colortheme_xboard">XBoard</string>
    <string name="colortheme_blue">Blue</string>
    <string name="colortheme_grey">Grey</string>
    <string name="colortheme_scid_default">Scid Default</string>
    <string name="colortheme_scid_brown">Scid Brown</string>
    <string name="colortheme_scid_green">Scid Green</string>
    <string name="colortheme_lichess_brown">Lichess Brown</string>
    <string name="colortheme_lichess_blue">Lichess Blue</string>
    <string name="colortheme_lichess_green">Lichess Green</string>
    <string name="colortheme_midnight">Midnight</string>
    <string name="colortheme_lichess_purple">Lichess Purple</string>
    <string name="colortheme_lichess_pink">Lichess Pink</string>
    <string name="colortheme_lichess_ic">Lichess IC</string>
    <string name="colortheme_lichess_wood">Lichess Wood</string>
    <string name="colortheme_lichess_canvas">Lichess Canvas</string>
    <string name="colortheme_lichess_marble">Lichess Marble</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="edit_replay_game">Edit/re-play Game</string>
    <string name="analysis_mode">Analysis Mode</string>
    <string name="play_white">Play White</string>
    <string name="play_black">Play Black</string>
    <string name="two_players">Two Players</string>
    <string name="comp_vs_comp">Computer vs Computer</string>
    <string name="analysis">Analysis</string>
    <string name="edit_game">Edit Game</string>
    <string name="edit_headers">Edit Headers</string>
    <string name="edit_comments">Edit Comments</string>
    <string name="add_eco">Add opening name</string>
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="goto_start_game">Goto Start of Game</string>
    <string name="goto_start_variation">Goto Start of Variation</string>
    <string name="goto_prev_variation">Goto Previous Variation</string>
    <string name="load_prev_game">Load Previous Game</string>
    <string name="goto_end_variation">Goto End of Variation</string>
    <string name="goto_next_variation">Goto Next Variation</string>
    <string name="load_next_game">Load Next Game</string>
    <string name="auto_forward">Auto Forward</string>
    <string name="auto_backward">Auto Backward</string>
    <string name="no_prev_game">No previous game</string>
    <string name="no_next_game">No next game</string>
    <string name="no_prev_fen">No previous position</string>
    <string name="no_next_fen">No next position</string>
    <string name="select_action">Select Action</string>
    <string name="flip_board">Flip Board</string>
    <string name="blind_mode">Blindfold mode</string>
    <string name="toggle_show_thinking">Toggle Show Thinking</string>
    <string name="toggle_book_hints">Toggle Book Hints</string>
    <string name="toggle_tb_hints">Toggle Tablebase Hints</string>
    <string name="toggle_pgn_variations">Toggle Variations</string>
    <string name="toggle_pgn_comments">Toggle Comments</string>
    <string name="toggle_pgn_headers">Toggle Headers</string>
    <string name="toggle_analysis">Toggle Engine Analysis</string>
    <string name="toggle_large_buttons">Toggle Large Buttons</string>
    <string name="toggle_blind_mode">Toggle Blindfold Mode</string>
    <string name="toggle_arrows">Toggle Arrows</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="move_number">Move number:</string>
    <string name="filename">Filename:</string>
    <string name="halfmove">Halfmove clock:</string>
    <string name="fullmove">Fullmove counter:</string>
    <string name="filter_text">Search…</string>
    <string name="value_percent">Value (%):</string>
    <string name="header_event">Event:</string>
    <string name="header_site">Site:</string>
    <string name="header_date">Date:</string>
    <string name="header_round">Round:</string>
    <string name="header_result">Result:</string>
    <string name="comment_before">Before:</string>
    <string name="comment_move">Move:</string>
    <string name="comment_after">After:</string>
    <string name="whites_move">White\'s move</string>
    <string name="blacks_move">Black\'s move</string>
    <string name="ponder">ponder</string>
    <string name="thinking">thinking</string>
    <string name="analyzing">analyzing</string>
    <string name="white_mate">Game over, white mates!</string>
    <string name="black_mate">Game over, black mates!</string>
    <string name="stalemate">Game over, draw by stalemate!</string>
    <string name="draw_rep">Game over, draw by repetition!</string>
    <string name="draw_50">Game over, draw by 50 move rule!</string>
    <string name="draw_no_mate">Game over, draw by impossibility of mate!</string>
    <string name="draw_agree">Game over, draw by agreement!</string>
    <string name="engine_match_engine1">Engine 1 (White first):</string>
    <string name="engine_match_engine2">Engine 2 (Black first):</string>
    <string name="engine_match_time">Time per side (seconds):</string>
    <string name="engine_match_increment">Increment (seconds):</string>
    <string name="engine_match_num_games">Number of games:</string>
    <string name="engine_match_use_current_pos">Use current position</string>
    <string name="engine_match_alternate_colors">Alternate colors</string>
    <string name="engine_match_keep_screen_on">Keep screen ON</string>
    <string name="engine_match_pgn_order">Selection order:</string>
    <string name="engine_match_opening_source">Opening Position:</string>
    <string name="engine_match_from_start">From starting position</string>
    <string name="engine_match_use_book">Use opening book</string>
    <string name="engine_match_max_plies">Max plies (half-moves):</string>
    <string name="engine_match_max_moves">Game length (moves):</string>
    <string name="engine_match_auto_adjudicate">Auto adjudicate game</string>
    <string name="engine_match_draw_threshold">Draw threshold (cp):</string>
    <string name="engine_match_resign_threshold">Resign threshold (cp):</string>
</resources>